--- a/package.json
+++ b/package.json
@@ -3,10 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "flow-remove-types src/ -d lib/",
-    "prepublish": "npm run build",
-    "flow": "flow"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
@@ -18,6 +15,13 @@
   "devDependencies": {
     "flow-bin": "^0.79.1",
     "flow-remove-types": "^1.2.3"
+  },
+  "directories": {
+    "lib": "lib"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://bitbucket.org/bgoodman1311/monopoly/src/master/"
   },
   "description": ""
 }
