--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "flow-bin": "^0.79.1",
     "flow-remove-types": "^1.2.3",
     "gulp": "^3.9.1",
+    "gulp-minify": "^3.1.0",
     "gulp-sourcemaps": "^2.6.4",
     "gulp-typescript": "^5.0.0-alpha.3",
     "gulp-uglify": "^3.0.1",
