--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,10 @@
         "target": "es5"
     },
     "include": [
-        "./src/**/*"
-    ]
+        "src/**/*"
+    ],
+    "exclude": [
+        "node_modules"
+    ],
+    "resolveJsonModule": true
 }
