--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha src/test.ts",
+    "dev": "echo \"DVL\"; node ./dist/bundle-min.js",
+    "start": "node ./dist/bundle-min.js"
   },
   "author": "",
   "license": "ISC",
@@ -14,13 +16,13 @@
     "lodash.combinations": "^18.6.25"
   },
   "devDependencies": {
+    "@types/chai": "^4.1.4",
     "babel-core": "^6.26.3",
     "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babelify": "^8.0.0",
     "browserify": "^16.2.2",
-    "flow-bin": "^0.79.1",
-    "flow-remove-types": "^1.2.3",
+    "chai": "^4.1.2",
     "gulp": "^3.9.1",
     "gulp-minify": "^3.1.0",
     "gulp-sourcemaps": "^2.6.4",
